# FTTU-interns

./: .gitignore  .gitmodules
Abhinav/DL_Operators_Assignment/: CMakeLists.txt  main.cpp
Abhinav/DL_Operators_Assignment/LayerwiseDump/: LayerWiseDump.ipynb  Model_to_Dump.ipynb
Abhinav/DL_Operators_Assignment/Operators/include/: convolution.h  dense.h  flatten.h  maxpool.h  relu.h  softmax.h
Abhinav/DL_Operators_Assignment/Report/: execution_log.txt
Abhinav/DL_Operators_Assignment/data/: model_architecture.json
Abhinav/Gtest_assignments/: CMakeLists.txt
Abhinav/Gtest_assignments/test/: test_my_math.cpp
Abishek/cpp_assignments/clock/: CMakeLists.txt  README.md
Abishek/cpp_assignments/clock/include/: clock.h
Abishek/cpp_assignments/image_preprocessing/: CMakeLists.txt  README.md
Abishek/deep_learning_operators_assignments/Root/: CMakeLists.txt  README.md
Abishek/gtest_assignments/math_lib/: CMakeLists.txt  README.md
Ayushmaan_Das/cpp_assignments/Deep_Learning_Operators_Layers/: .gitignore  CMakeLists.txt  dump_onnx_runtime.cpp  main.cpp
Ayushmaan_Das/cpp_assignments/Image_Preprocessing_Assignment/: CMakeLists.txt  Main.cpp  README.md  logs.txt
Ayushmaan_Das/deepLearningOperators_assignment/: .gitignore  CMakeLists.txt  README.md  Workplan.TODO  executor.cpp  main.cpp  onnx_json_parser.cpp  operators.cpp  parser.cpp
Ayushmaan_Das/deepLearningOperators_assignment/include/: executor.h  onnx_model.h  operators.h
Ayushmaan_Das/deepLearningOperators_assignment/layer_wise_dumping/: dump.py  generate_config.py  using_onnx_runtime.cpp
Ayushmaan_Das/deepLearningOperators_assignment/logs/: FINAL_DETAILED_LOGS.txt  LAYER_WISE_LOGS.txt  execution_log.txt
Ayushmaan_Das/deepLearningOperators_assignment/src/: executor.cpp  onnx_json_parser.cpp  operators.cpp  parser.cpp
Ayushmaan_Das/testing_assignments/GTEST_codeCoverage_unitTesting/: CMakeLists.txt  README.md  commands.txt  main.cpp
Bhuvanesh/Code Coverage Analysis and Unit Testing Enhancement/GTest-Coverage/: CMakeLists.txt  test_my_program.cpp
Ganesan/cpp_assignments/image_processing/: CMakeLists.txt  README.md  main.cpp
Ganesan/deep_learning_assignment/DeepLearningProject/: .gitignore  CMakeLists.txt
Pratheesh/cpp_assignments/Clock Application/: CMakeLists.txt  main.cpp
Pratheesh/cpp_assignments/Image_Preprocessing/: CMakeLists.txt  main.cpp
Pratheesh/deep_learning_operators_assignment/: CMakeLists.txt
Pratheesh/deep_learning_operators_assignment/src/: main.cpp
Pratheesh/gtest_assignments/: CMakeLists.txt
Pratheesh/gtest_assignments/edge_test_report/: coverage_report.edge_case_tests.cpp.7c5aa53be378ba2c4a3ee743eee63a06.html  coverage_report.functions.html  coverage_report.html  coverage_report.math_lib_test.cpp.e57cfdb11f3c86c07b057ea737ef9b9b.html  coverage_report.updated_my_math.cpp.1cb51de630982e4f7af722ddda57470e.html
Pratheesh/gtest_assignments/test/: math_lib_test.cpp
Pratheesh/gtest_assignments/test_coverage/: edge_case_tests.cpp
Pratheesh/gtest_assignments/unit_test_report/: coverage_report.edge_case_tests.cpp.7c5aa53be378ba2c4a3ee743eee63a06.html  coverage_report.functions.html  coverage_report.html  coverage_report.math_lib_test.cpp.e57cfdb11f3c86c07b057ea737ef9b9b.html  coverage_report.updated_my_math.cpp.1cb51de630982e4f7af722ddda57470e.html
Ragul/G-Test_Assignments/: CMakeLists.txt
Ragul/G-Test_Assignments/Report/: coverage_report.functions.html  coverage_report.html  coverage_report.unit_test_math_lib.cpp.08d7f1f3024fc67c32dc23358bd5466e.html  coverage_report.updated_math_lib.cpp.db80f79e6fa351d3388046d1ec3e2171.html
Ragul/G-Test_Assignments/Updated_math_lib/: updated_math_lib.cpp
Ragul/G-Test_Assignments/edge_test/: edge_test_math_lib.cpp
Ragul/G-Test_Assignments/unit_test/: unit_test_math_lib.cpp
Ragul/cpp_assignments/image processing/: CMakeLists.txt
Rakshan/G-Test_assignment/Assignment-6_GTest/: .gitignore  CMakeLists.txt  TestExample.cpp
Rakshan/cpp_assignments/ImageProcessing/: CMakeLists.txt  ImageProcessor.cpp
Sakthi_Santhosh/Gtest_Assignment/: CMakeLists.txt
Sakthi_Santhosh/Gtest_Assignment/test_coverage/: test_main.cpp
ayush/gtest_assignment/: CMakeLists.txt
ayush/gtest_assignment/test_coverage/: test_my_math.cpp
deivanayaki/dl_operator_assignments/: CMakeLists.txt  README.md  main.cpp
deivanayaki/dl_operator_assignments/Reports/: predictions.json
deivanayaki/gtest_assignments/: CMakeLists.txt  README.md
deivanayaki/gtest_assignments/reports/: index-sort-f.html  index-sort-l.html  index.html  math_index.html  my_math.cpp.func-sort-c.html  my_math.cpp.func.html  my_math.cpp.gcov.html
deivanayaki/gtest_assignments/src/: my_math.cpp
deivanayaki/gtest_assignments/tests/: my_math_tests.cpp  run_tests.cpp
pravin/gtest_assignments/: CMakeLists.txt
pravin/gtest_assignments/coverage_report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
pravin/gtest_assignments/tests/: my_math_test.cpp
rohithk/deeplearning_operators_assignment/: CMakeLists.txt  README.md  custom_cnn.py  main.ipynb
rohithk/deeplearning_operators_assignment/report/: prediction.txt
rohithk/deeplearning_operators_assignment/src/: a.py  custom_cnn.py  layer_dump.ipynb  main.cpp  main.ipynb  test.py  test2.ipynb
rohithk/deeplearning_operators_assignment/temp/: data.json  main
rohithk/gtest_assignment/: CMakeLists.txt
rohithk/gtest_assignment/coverage_html/: index-sort-f.html  index-sort-l.html  index.html
rohithk/gtest_assignment/src/: my_math.cpp
suganth/deep_learning_operators/: CMakeLists.txt  Readme.md
suganth/deep_learning_operators/include/: cnn_functions.h
suganth/deep_learning_operators/model_comparison/: model.comparison.ipynb  preTrained_model_output.ipynb  preTrained_model_softmax_outcomes.json
suganth/deep_learning_operators/src/: cnn_functions.cpp  main.cpp
suganth/deep_learning_operators/workspace/: weights_obtaining.ipynb
suganth/gtest_assignment/: CMakeLists.txt
suganth/gtest_assignment/coverage_report/: test_coverage_report.html  test_coverage_report.math_lib_test.cpp.ef7360864a1f5240c8fb8971e1d7ad1d.html
(+1848 files in other folders)
